# WindowsColorBlaster

./: CMakeLists.txt
src/: imcontext.cpp  imcontext.hpp  main_d3d11.cpp  main_d3d12.cpp
src/canvas/: canvas_d3d11.cpp  canvas_d3d11.h
src/canvas/shader/: common.hlsl  pixel.hlsl  vertex.hlsl
